<resources>
    <string name="app_name">E-Channelling</string>
    <string name="txt31">Add feed back</string>
    <string name="txt32">Support Service</string>
    <string name="txt33">-0112222222-</string>
    <string name="edit14">your comments...</string>
    <string name="button12">OK</string>
    <string name="button13">Cancel</string>
    <string name="txt37">E - Channelling Member Card</string>
    <string name="edit16">Full name</string>
    <string name="edit17">NIC</string>
    <string name="edit18">Contact number</string>
    <string name="edit19">User name</string>
    <string name="edit20">Password</string>
    <string name="button16">Create member card</string>
    <string name="txt6">Add Patient Details</string>
    <string name="txt7">Full Name :</string>
    <string name="txt8">Last Name :</string>
    <string name="txt9">Gender :</string>
    <string name="txt10">E-mail :</string>
    <string name="txt11">NIC :</string>
    <string name="txt12">Contact Number :</string>
    <string name="txt13">Age :</string>
    <string name="radio1">Male</string>
    <string name="radio2">Female</string>
    <string name="edit7">123456789V</string>
    <string name="edit8">Roshan</string>
    <string name="edit9">roshan@gmail.com</string>
    <string name="edit11">0112325621</string>
    <string name="edit12">Colombo</string>
    <string name="edit13">25</string>
    <string name="button9">INSERT</string>
    <string name="txt1">Insert is successful!</string>
    <string name="button1">OK</string>
    <string name="button4">Done</string>
    <string name="txt2">Update your details</string>
    <string name="edit1">NIC</string>
    <string name="edit2">E-mail</string>
    <string name="edit3">Contact Number</string>
    <string name="edit4">Age</string>
    <string name="edit5">Address</string>
    <string name="button2">Update details</string>
    <string name="txt4">Delete your details</string>
    <string name="edit6">NIC</string>
    <string name="button3">Delete details</string>
    <string name="txt5">Welcome to the E-Channelling</string>
    <string name="button5">Add patient details</string>
    <string name="button6">View doctor details</string>
    <string name="button7">Add feed back</string>
    <string name="button8">View patient profile</string>
    
    <string name="app_name">Echanneling_System</string>
    <string name="sel_pname">Patient Name</string>
    <string name="sel_age">Age of the Patient</string>
    <string name="sel_nic">NIC No</string>
    <string name="sel_contactno">Contact No</string>
    <string name="bankcard_no">Card No</string>
    <string name="cvv_no">CVV</string>
    <string name="main_title">APPOINTMENT</string>
    <string name="apt_btn1">Appointment to your doctor</string>
    <string name="apt_btn2">Appointment for Lab Test</string>
    <string name="search_abtn">Search</string>
    <string name="sel_nextbtn">Next</string>
    <string name="channelbtn">Channel</string>
    <string name="pay_btn">Pay</string>
    <string name="ca_okbtn">OK</string>
    <string name="edit_btn">Edit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="no_generate">NO</string>
    <string name="ca_pname">Name</string>
    <string name="p_age">Age</string>
    <string name="ca_phoneno">Phone No</string>
    <string name="ca_doctor">Doctor</string>
    <string name="channnel_docname">Name of the Doctor</string>
    <string name="channel_specilization">Specialization</string>
    <string name="channel_datetime">Date And Time</string>
    <string name="click_bookbtn">Book</string>
    <string name="cpn_result" />
    <string name="pa_result" />
    <string name="pno_result" />
    <string name="cadoctor_result" />
    <string name="cdn_result" />
    <string name="csp_result" />
    <string name="cdt_result" />
    <string name="cBox">Blood Test</string>
    <string name="cBox2">Kidney Function Test</string>
    <string name="cBox3">Autopsy</string>
    <string name="cBox4">X-ray</string>
    <string name="cBox5">Skin Test</string>
    <string name="cBox6">Biopsy</string>
    <string name="cBox7">Laparoscopy</string>
    <string name="cBox8">Mammography</string>
    <string name="cBox9">Liver Function Test</string>
    <string name="cBox10">Scan</string>
    <string name="cBox11">CT Scan</string>
    <string name="cBox12">PCR</string>
    <string name="ca_hospital">Hospital</string>
    <string name="display_date">Date</string>
    <string name="ahospital_result" />
    <string name="display_dresult" />
    <string name="cp_nic">NIC</string>
    <string name="cpnic_result" />
    <string name="datepicker1">Select Date</string>
    <string name="date_picker_2">Select Card Expire Date</string>
    <string name="sel_date3">Select Date</string>
    <string name="channel_hospital">Hospital</string>
    <string name="ch_result" />
    <string name="visitandpay"><![CDATA[Visit & Pay]]></string>
    <string name="labTests">Lab / Labs</string>
    <string name="totalLabprices">Total Price</string>
    <string name="labnames1" />
    <string name="totalpriceresult" />
    <string name="totalbutton">Do your Payment</string>
    <string-array name="dname">
        <item>Doctor\'s Name</item>
        <item>Any</item>
        <item>Dr.Lalith Gunawardhana</item>
        <item>Dr.S.K.D.Premathilaka</item>
    </string-array>
    <string-array name="specialization">
        <item>Specialization</item>
        <item>Any</item>
        <item>Ayurveda</item>
        <item>Cardiologist</item>
    </string-array>
    <string-array name="hospital">
        <item>Hospital</item>
        <item>Any</item>
        <item>Kings Hospital</item>
        <item>Lanka Hospital</item>
    </string-array>
    <string-array name="banks">
        <item>Select Your Bank</item>
        <item>BOC</item>
        <item>HNB</item>
        <item>Peoples Bank</item>
    </string-array>

    
    
    
       <string name="app_name">DoctorManagement</string>
    <string name="btn1" />
    <string name="Button" />
</resources>
