<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationAppointment">

    <TextView
        android:id="@+id/cadoctor_result"
        android:layout_width="208dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:text="@string/cadoctor_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pno_result" />

    <Button
        android:id="@+id/ca_okbtn"
        android:layout_width="85dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        android:text="@string/ca_okbtn"
        android:textColor="@color/heddingblue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/lightblue"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/edit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cp_nic" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="129dp"
        android:layout_height="68dp"
        android:layout_marginEnd="12dp"
        android:onClick="DeletePAppointment"
        android:text="@string/edit_btn"
        android:textColor="@color/heddingblue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/lightblue"
        app:cornerRadius="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel_btn"
        app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ca_okbtn" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="123dp"
        android:layout_height="63dp"
        android:layout_marginEnd="16dp"
        android:onClick="UpdatePAppointment"
        android:text="@string/cancel_btn"
        android:textColor="@color/heddingblue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/lightblue"
        app:cornerRadius="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ca_okbtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/no_generate"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="200dp"
        android:text="@string/no_generate"
        app:layout_constraintBottom_toBottomOf="@+id/ca_pname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <TextView
        android:id="@+id/ca_pname"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:text="@string/ca_pname"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/p_age"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/p_age"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ca_pname" />

    <TextView
        android:id="@+id/ca_phoneno"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/ca_phoneno"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_age" />

    <TextView
        android:id="@+id/ca_doctor"
        android:layout_width="126dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:text="@string/ca_doctor"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/cadoctor_result"
        app:layout_constraintEnd_toStartOf="@+id/cadoctor_result"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ca_hospital"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:text="@string/ca_hospital"
        android:textColor="@color/peo"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/ahospital_result"
        app:layout_constraintEnd_toStartOf="@+id/ahospital_result"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ahospital_result"
        android:layout_width="208dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/ahospital_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadoctor_result" />

    <TextView
        android:id="@+id/display_date"
        android:layout_width="129dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/display_date"
        android:textColor="@color/peo"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ca_hospital" />

    <TextView
        android:id="@+id/cp_nic"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/cp_nic"
        android:textColor="@color/peo"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_date" />

    <EditText
        android:id="@+id/cpn_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cpn_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/ca_pname"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pa_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pa_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p_age"
        app:layout_constraintTop_toBottomOf="@+id/cpn_result" />

    <EditText
        android:id="@+id/pno_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pno_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toEndOf="@+id/ca_phoneno"
        app:layout_constraintTop_toBottomOf="@+id/pa_result" />

    <EditText
        android:id="@+id/display_dresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/display_dresult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/display_date"
        app:layout_constraintTop_toBottomOf="@+id/ahospital_result" />

    <EditText
        android:id="@+id/cpnic_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cpnic_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toEndOf="@+id/cp_nic"
        app:layout_constraintTop_toBottomOf="@+id/display_dresult" />

</androidx.constraintlayout.widget.ConstraintLayout>