<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayAppointmentPrice">

    <TextView
        android:id="@+id/labTests"
        android:layout_width="396dp"
        android:layout_height="78dp"
        android:layout_marginTop="52dp"
        android:text="@string/labTests"
        android:textColor="@color/peo"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/labnames1"
        android:layout_width="404dp"
        android:layout_height="73dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/labnames1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labTests" />

    <TextView
        android:id="@+id/totalLabprices"
        android:layout_width="404dp"
        android:layout_height="67dp"
        android:layout_marginTop="64dp"
        android:text="@string/totalLabprices"
        android:textColor="@color/peo"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labnames1" />

    <EditText
        android:id="@+id/totalpriceresult"
        android:layout_width="411dp"
        android:layout_height="99dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/totalpriceresult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalLabprices" />

    <Button
        android:id="@+id/totalbutton"
        android:layout_width="268dp"
        android:layout_height="64dp"
        android:layout_marginBottom="156dp"
        android:text="@string/totalbutton"
        android:textColor="@color/heddingblue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/lightblue"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalpriceresult"
        app:layout_constraintVertical_bias="0.819" />
</androidx.constraintlayout.widget.ConstraintLayout>