<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:text="@string/main_title"
        android:textColor="@color/heddingblue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/apt_btn1"
        android:layout_width="227dp"
        android:layout_height="192dp"
        android:layout_marginTop="44dp"
        android:text="@string/apt_btn1"
        android:textColor="@color/peo"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/lightblue"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <Button
        android:id="@+id/apt_btn2"
        android:layout_width="227dp"
        android:layout_height="192dp"
        android:layout_marginTop="52dp"
        android:text="@string/apt_btn2"
        android:textColor="@color/peo"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/lightblue"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apt_btn1" />
</androidx.constraintlayout.widget.ConstraintLayout>